finish demo 4 chapter 6

--- a/demos_ch6/demo6_4.ipynb
+++ b/demos_ch6/demo6_4.ipynb
@@ -1,17 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Bayesian data analysis\n",
-    "##  Chapter 6, demo 4\n",
-    "\n",
-    "Posterior predictive checking  \n",
-    "Light speed example"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -26,43 +15,32 @@
     "from scipy import stats\n",
     "\n",
     "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "import os, sys\n",
-    "# add utilities directory to path\n",
+    "\n",
     "util_path = os.path.abspath(os.path.join(os.path.pardir, 'utilities_and_data'))\n",
     "if util_path not in sys.path and os.path.exists(util_path):\n",
     "    sys.path.insert(0, util_path)\n",
     "\n",
-    "# import from utilities\n",
-    "import plot_tools"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# edit default plot settings\n",
+    "import plot_tools\n",
+    "\n",
     "plt.rc('font', size=12)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bayesian data analysis\n",
+    "##  Chapter 6, demo 4\n",
+    "\n",
+    "Posterior predictive checking for light speed example, p. 152-153."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -71,7 +49,6 @@
    },
    "outputs": [],
    "source": [
-    "# data\n",
     "data_path = os.path.abspath(\n",
     "    os.path.join(\n",
     "        os.path.pardir,\n",
@@ -80,15 +57,41 @@
     "    )\n",
     ")\n",
     "y = np.loadtxt(data_path)\n",
-    "# sufficient statistics\n",
+    "\n",
     "n = len(y)\n",
     "s2 = np.var(y, ddof=1)\n",
     "my = np.mean(y)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we know the analytical form of the posterior predictive distribution we can use this to calculate test quantities.\n",
+    "\n",
+    "Here we calculate, based on the form of the posterior predictive distribution, the tail area probability for each point in the observed data.\n",
+    "\n",
+    "In this example this is:\n",
+    "\n",
+    "$$p_i = \\text{Pr}(T(y_i^{rep}) \\leq T(y_i) \\mid y)$$\n",
+    "\n",
+    "with $T(y_i) = y_i$. \n",
+    "\n",
+    "In other words, under the posterior predictive distribution, what's the probability of finding a value more extreme than each of the original data points? If the observed data matches the posterior predictive we should expect to see a uniform distribution as we're plugging samples from the pdf into the cdf (uncomment the cell below to see this)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#y = stats.t.rvs(df=n-1, loc=my, scale=np.sqrt(s2*(1+1/n)), size=10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -97,13 +100,12 @@
    },
    "outputs": [],
    "source": [
-    "# tail area probabilities of marginal predictive distributions\n",
     "Ty = stats.t.cdf(y, n-1, loc=my, scale=np.sqrt(s2*(1+1/n)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -125,12 +127,18 @@
     }
    ],
    "source": [
-    "# plot\n",
     "plt.hist(Ty, np.arange(0, 1.01, 0.05))\n",
     "plt.xlim((0, 1))\n",
     "plt.title('Light speed example\\ndistribution of marginal posterior p-values')\n",
     "plot_tools.modify_axes.only_x(plt.gca())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
